--- a/index.html
+++ b/index.html
@@ -51,7 +51,35 @@
           <!--  -->
         </div>
         <!-- second col -->
-        <div class="tip-calc-second-col"></div>
+        <div class="tip-calc-second-col">
+          <!--  -->
+          <div class="first-col-price">
+            <div class="item-1">
+              <p class="item-1-first-p">Tip Amount</p>
+              <p class="item-1-second-p">/ person</p>
+            </div>
+            <div class="item-2 price">
+              <p class="item-2-first-p">
+                $ <span class="price-one">0.00</span>
+              </p>
+            </div>
+          </div>
+          <!--  -->
+          <div class="second-col-price">
+            <div class="second-col-price-item-1">
+              <p class="item-2-first-p">Total</p>
+              <p class="item-2-second-p">/ person</p>
+            </div>
+            <!--  -->
+            <div class="item-2 price">
+              <p class="item-2-first-p">
+                $ <span class="price-one">0.00</span>
+              </p>
+            </div>
+          </div>
+          <!--  -->
+          <button class="reset-btn">Reset</button>
+        </div>
       </div>
     </section>
     <!--  -->
