--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="input-first">
             <p class="input-first-paragraph">Bill</p>
             <form>
-              $
+              <i class="fa-solid fa-dollar-sign form-icon"></i>
               <input type="text" placeholder="0" />
             </form>
           </div>
@@ -33,7 +33,6 @@
               <a href="" class="tip-per-btn five-per">5%</a>
               <a href="" class="tip-per-btn ten-per">10%</a>
               <a href="" class="tip-per-btn fiften-per">15%</a>
-              <a href="" class="tip-per-btn twenty-per">20%</a>
               <a href="" class="tip-per-btn twenty-five-per">25%</a>
               <a href="" class="tip-per-btn fifty-per">50%</a>
               <a href="" class="tip-per-btn custom-btn">Custom</a>
@@ -43,7 +42,7 @@
           <div class="input-third">
             <h5 class="input-third-h5">Number of people</h5>
             <form>
-              <i class="fa-solid fa-user"></i>
+              <i class="fa-solid fa-user form-icon"></i>
               <input type="text" placeholder="0" />
             </form>
           </div>
