--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <p class="item-1-second-p">/ person</p>
             </div>
             <div class="item-2 price">
-              <p class="item-2-first-p">
+              <p class="item-2-first-price">
                 $ <span class="price-one">0.00</span>
               </p>
             </div>
@@ -76,13 +76,15 @@
             </div>
             <!--  -->
             <div class="item-2 price">
-              <p class="item-2-first-p">
-                $ <span class="price-one">0.00</span>
+              <p class="item-2-first-price">
+                $ <span class="price-two">0.00</span>
               </p>
             </div>
           </div>
           <!--  -->
-          <button class="reset-btn">Reset</button>
+          <div class="reset-btn-container">
+            <button class="reset-btn">Reset</button>
+          </div>
         </div>
       </div>
     </section>
