--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p class="input-first-paragraph">Bill</p>
             <form>
               <i class="fa-solid fa-dollar-sign form-icon"></i>
-              <input type="text" placeholder="0" />
+              <input type="text" class="bill-input" placeholder="0" />
             </form>
           </div>
           <!--  -->
@@ -83,6 +83,7 @@
           </div>
           <!--  -->
           <div class="reset-btn-container">
+            <button class="sum-btn">Sum</button>
             <button class="reset-btn">Reset</button>
           </div>
         </div>
