--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h5 class="input-third-h5">Number of people</h5>
             <form>
               <i class="fa-solid fa-user form-icon"></i>
-              <input type="text" placeholder="0" />
+              <input type="text" class="people-input" placeholder="0" />
             </form>
           </div>
           <!--  -->
