--- a/index.html
+++ b/index.html
@@ -29,14 +29,10 @@
           <!--  -->
           <div class="input-second">
             <h5 class="input-second-h5">Select Tip %</h5>
-            <div class="tip-per-btns">
-              <a href="" class="tip-per-btn five-per">5%</a>
-              <a href="" class="tip-per-btn ten-per">10%</a>
-              <a href="" class="tip-per-btn fiften-per">15%</a>
-              <a href="" class="tip-per-btn twenty-five-per">25%</a>
-              <a href="" class="tip-per-btn fifty-per">50%</a>
-              <a href="" class="tip-per-btn custom-btn">Custom</a>
-            </div>
+            <form>
+              <i class="fa-solid fa-percent form-icon"></i>
+              <input type="text" class="percent-input" placeholder="0" />
+            </form>
           </div>
           <!--  -->
           <div class="input-third">
